--- a/angular/quantum-angular/package.json
+++ b/angular/quantum-angular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quantum-angular",
+  "name": "walk-in-portal",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -17,6 +17,7 @@
     "@angular/core": "^15.1.0",
     "@angular/forms": "^15.1.0",
     "@angular/material": "^15.1.2",
+    "@angular/material-moment-adapter": "^15.1.2",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
